<resources>
    <string name="app_name">opencv4camera</string>
    <string name="title_activity_camera_open_cv">CameraOpenCV</string>
    <string name="inverse">反色</string>
    <string name="gause_blue">高斯滤波</string>
    <string name="edge">边缘</string>
    <string name="face_detect">人脸检测</string>
    <string name="eye_detect">人眼检测</string>
    <string name="face_track">人脸追踪</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
