<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/inverse"
        android:orderInCategory="100"
        android:title="@string/inverse"/>
    <item
        android:id="@+id/gause_blue"
        android:orderInCategory="100"
        android:title="@string/gause_blue" />
    <item
        android:id="@+id/edge"
        android:orderInCategory="100"
        android:title="@string/edge" />
    <item
        android:id="@+id/obj_detect"
        android:orderInCategory="100"
        android:title="@string/obj_detect" />
    <item
        android:id="@+id/face_track"
        android:orderInCategory="100"
        android:title="@string/face_track" />
    <item
        android:id="@+id/eye_detect"
        android:orderInCategory="100"
        android:title="@string/eye_detect" />
</menu>